--- a/gamestyle.css
+++ b/gamestyle.css
@@ -3,11 +3,18 @@
   height: 50px;
   background-color: red;
   left: 0px;
-  top: 0px;
+  top: 50%;
+  position: absolute;
+}
+#finish {
+  width: 50px;
+  height: 50px;
+  background-color: yellow;
+  right: 0px;
+  top: 50%;
   position: absolute;
 }
 body {
-  height: 100%;
-  width: 100%;
   background-color: green;
+  background-size: cover;
 }
