--- a/gamestyle.css
+++ b/gamestyle.css
@@ -19,5 +19,10 @@ body {
   background-size: cover;
   max-height: 100vh;
   max-width: 100vw;
- /* overflow: hidden;*/
+}
+.random {
+  width: 50px;
+  height: 50px;
+  background-color: blue;
+  position: absolute;
 }
