--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@ h2 {
   font-family: 'Exo', sans-serif;
   font-size: 4vh;
 }
+h3 {
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 8px;
+  text-decoration: underline;
+}
 button {
-  position: absolute;
+margin-top: 25px;
 }
 .header {
   margin-top: 4vh;
@@ -43,15 +49,29 @@ button {
 }
 .info {
   margin-top: 5vh;
-  background-color: white;
+  background-color: #8CFFE8;
   position: relative;
-  border-radius: 3px;
+  border-radius: 5px;
   height: 300px;
   width: 400px;
+}
+#ptag {
+  width: 400px;
+  text-align: left;
+  font-size: 15px;
+  margin-left: 5px;
 }
 .instruction {
   font-family: 'Exo', sans-serif;
   font-size: 4vh;
+}
+@media (max-width: 6000px) {
+  h1 {
+   font-size: 8vh;
+  }
+  .buy img {
+   height: 3vh;
+  }
 }
 @media (max-width: 470px) {
   h1 {
@@ -61,6 +81,34 @@ button {
     font-size: 3vh;
   }
   .buy img {
-  height: 3vh;
+    height: 3vh;
+  }
+  .info {
+    width: 300px;
+  }
+  #ptag {
+    width: 300px;
+  }
 }
+@media (max-width: 300px) {
+  .brief {
+    margin-top: 5vh;
+  }
+  }
+  @media (max-height: 550px) {
+  .info {
+    margin-top: 5vh;
+    height: 200px;
+  }
+  #ptag {
+    font-size: 10px;
+    margin-left: 5px;
+  }
+  button {
+   margin-top: 20px;
+  }
+  h3 {
+    margin-bottom: 15px;
+    margin-top: 5px;
+  }
 }
